--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -1,1 +1,12 @@
 /* pages/search/search.wxss */
+page {
+  height: 100%;
+  overflow: hidden;
+}
+.container {
+  /* width: 100%;
+  height: 100vh; */
+  display: flex;
+  flex: 1;
+  /* background-color: red; */
+}
