--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -96,7 +96,11 @@
         </view>
       </view>
     </view>
-    
+    <view style="padding: 0 10px; margin: 10px 0">
+      <view class="weather" bindtap="studyFormFn">
+        <text>查看表单</text>
+      </view>
+    </view>
   <!-- <view class="userinfo"> -->
     <!-- <block wx:if="{{canIUseOpenData}}">
       <view class="userinfo-avatar" bindtap="bindViewTap">
